XMLExper/m12/m12_491_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual tinyxml2::XMLNode* tinyxml2::XMLElement::ShallowClone(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:2120:56: error: lvalue required as left operand of assignment
 2120 |         /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) = _document;
      |                                                        ^~~~~~~~~
diff: tinyxml2.S: No such file or directory
